# laysh

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package.json  pyproject.toml
deploy/: README.md  cloudflared.example.yml  laysh-healthcheck.service  laysh-healthcheck.timer  laysh.service
docs/: CLEAN_CHECKOUT.md
scripts/: benchmark.py  cache_admin.py  capture_release_service.py  check_artifact.mjs  check_g5_gallery.mjs  check_golden.mjs  check_golden_release.mjs  check_live_product.mjs  check_no_example_specific_runtime.py  check_product.mjs  evaluate_generation_routing.py  freeze_contracts.py  freeze_static_assets.py  g3_demo.py  generate_goldens.py  healthcheck.py  live_g2.py  live_m5_smokes.py  preflight.py  refresh_curated_pinned_shells.py  refresh_pinned_golden_shared_models.py  refresh_pinned_goldens.py  refresh_pinned_moon_geometry.py  schema_acceptance.py  serve.sh  verify_clean_checkout.py  verify_golden_motion.py  verify_golden_physics_motion.py  verify_golden_release.py  verify_golden_shared_models.py  verify_module.mjs  verify_release.py  verify_session_provenance.py
server/: __init__.py  app.py  assemble.py  browser_verify.py  cache.py  codex_backend.py  codex_runtime.py  curated_scene.py  evidence.py  golden_geometry.py  golden_motion.py  golden_physics_motion.py  golden_shared_state.py  goldens.py  jobs.py  model_routing.py  motion.py  physics_motion.py  pipeline.py  privacy.py  promotion.py  ratelimit.py  routing_decision.json  scene_geometry.py  schema_acceptance.py  schemas.py  session_provenance.py  verify.py  (+5 more)
(+130 files in other folders)
